--- a/requirements.txt
+++ b/requirements.txt
@@ -15,11 +15,19 @@ Jinja2==3.1.6
 limits==5.6.0
 markdown-it-py==4.0.0
 MarkupSafe==3.0.3
+marshmallow==3.20.1
+marshmallow-sqlalchemy==0.30.1
 mdurl==0.1.2
+mysql-connector-python==8.1.1
 ordered-set==4.1.0
 packaging==25.0
+psycopg2==2.9.10
+Pygments==2.18.0
+PyJWT==2.9.0
+PyYAML==6.0.2
 Pygments==2.19.2
 rich==14.2.0
+SQLAlchemy==2.0.20
 typing_extensions==4.15.0
 Werkzeug==3.1.3
 wrapt==1.17.3
