--- a/requirements.txt
+++ b/requirements.txt
@@ -22,7 +22,7 @@ mysql-connector-python==9.0.0
 ordered-set==4.1.0
 packaging==25.0
 psycopg2==2.9.10
-Pygments==2.18.0
+Pygments==2.19.2
 PyJWT==2.9.0
 PyYAML==6.0.2
 rich==14.2.0
@@ -30,3 +30,4 @@ SQLAlchemy==2.0.35
 typing_extensions==4.15.0
 Werkzeug==3.1.3
 wrapt==1.17.3
+python-jose==3.3.0
