--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -61,6 +61,7 @@ jobs:
         run: python -m unittest discover -s tests -p 'test_*.py'
 
   deploy:
+    needs: test
     runs-on: ubuntu-latest
 
     steps:
@@ -81,13 +82,6 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install -r requirements.txt
-
-      - name: Print debugging information
-        run: |
-          echo "Python Version: $(python --version)"
-          echo "Working Directory: $(pwd)"
-          echo "Contents of Working Directory: $(1s -1)"
-          echo "Contents of site-packages: $(1s -1 venv/lib/python*/site-packages)"
 
       - name: Deploy to production
               uses: johnbeynon/render-deploy-action@v0.0.8
